Grace - Added enums for Environments, Item Effects, and Items.        - Created AddRandomItem use case        - created tests for addItem, removeItem and useItem use cases